fixed z-index for home-page

--- a/assets/scss/_home-page.scss
+++ b/assets/scss/_home-page.scss
@@ -2,10 +2,7 @@
   padding-top: 20px;
   padding-bottom: 180px;
   overflow: hidden;
-  .text {
-    position: relative;
-    z-index: 1;
-  }
+  
   .sub-text {
     margin-top: 20px;
     margin-bottom: 39px;
